compiler/test/fail_compilation/fail184.d
/*
TEST_OUTPUT:
---
fail_compilation/fail184.d(10): Error: redundant attribute `final`
final final int x;
      ^
---
*/

final final int x;
